better comments and function parameter descriptions.

--- a/ZonalClimateAnalyzer.ipynb
+++ b/ZonalClimateAnalyzer.ipynb
@@ -12,15 +12,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "0867040f-bfbc-4373-aa08-aca3eff1645a",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def check_crs(shapefile):\n",
-    "    \n",
+    "def check_crs(shapefile:str):\n",
+    "    '''\n",
+    "    Takes a path to a Shapefile (as String) as Input.\n",
+    "    Reads shapefile.\n",
+    "    Returns True if it has a valid CRS,\n",
+    "    Returns False if it die NOT have a valid CRS.\n",
+    "    '''\n",
     "\n",
     "    # Load the shapefile\n",
     "    gdf = gpd.read_file(shapefile)\n",
@@ -29,19 +30,17 @@
     "    valid_crs = gdf.crs\n",
     "    if valid_crs:\n",
     "        print(\"CRS is defined:\", gdf.crs)\n",
+    "        return True\n",
     "    else:\n",
-    "        print(\"CRS is NOT defined.\")"
+    "        print(\"CRS is NOT defined.\")\n",
+    "        return False"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "id": "fc0f1783-cd16-4134-99d5-3e3bf23eb2a2",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -71,6 +70,13 @@
    ],
    "source": [
     "def get_shp():\n",
+    "    '''\n",
+    "    Lets the user input a path to the shapefile in the terminal.\n",
+    "    Checks if the path leads to a shapefile.\n",
+    "    Checks if the shapefile has a valid CRS.\n",
+    "    Gives feedback depending on the user input.\n",
+    "    Returns path to the shapefile if Valid shp and CRS are found.\n",
+    "    '''\n",
     "    from pathlib import Path\n",
     "    import geopandas as gpd\n",
     "    from pyproj import CRS\n",
@@ -117,9 +123,6 @@
     "            print('Invalid path or not a shapefile.')\n",
     "            continue\n",
     "\n",
-    "\n",
-    "\n",
-    "# /home/luser/Documents/Code/lokal_climate_analysis/Data/berlin12047_EPSG31467.shp\n",
     "shp = get_shp()"
    ]
   },
@@ -135,13 +138,12 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "762502a1-addd-4c37-bf4f-3fa91ebe5180",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "# Not needed anymore as I swiched to tqdm? \n",
+    "# TODO: Test if everything works without this function, then remove it.\n",
+    "\n",
     "def loading_bar(current, total, current_item, message='Progress:', bar_length=40):\n",
     "    \"\"\"\n",
     "    Displays a single-line loading/progress bar that works in both Jupyter Notebooks and terminals.\n",
@@ -171,10 +173,7 @@
     "        sys.stdout.flush()\n",
     "\n",
     "    if current >= total:\n",
-    "        print('\\nFinished!\\n')\n",
-    "\n",
-    "#loading bar sucks.\n",
-    "from tqdm import tqdm"
+    "        print('\\nFinished!\\n')"
    ]
   },
   {
@@ -189,11 +188,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "8adafad2-baf5-4b3a-b918-308dcb7a9e81",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def download_dwd_data(folder: str, base_url: str, file_types=['.asc.gz', '.pdf', '.zip']):\n",
@@ -209,7 +204,7 @@
     "    Example: download_dwd_data('/home/user/Documents/Folder', 'https://opendata.dwd.de/climate_environment/CDC/grids_germany/annual/vegetation_end/', '.pdf')\n",
     "    '''\n",
     "\n",
-    "    # Implement a test if data is already downloaded and then skip\n",
+    "    # TODO: Implement a test if data is already in folder and then skip\n",
     "\n",
     "    import os\n",
     "    from pprint import pprint\n",
@@ -217,7 +212,7 @@
     "    from bs4 import BeautifulSoup\n",
     "    from urllib.parse import urljoin   \n",
     "\n",
-    "    # Create folder if it doesn't exist\n",
+    "    # Create folder if it doesn't exist yet\n",
     "    os.makedirs(folder, exist_ok=True)\n",
     "\n",
     "    # Retrieve webpage content\n",
@@ -230,7 +225,6 @@
     "\n",
     "    # Find all relevant links\n",
     "    links = [a['href'] for a in soup.find_all('a', href=True) if a['href'].endswith(tuple(file_types))] # tuple because .endswith does not accept lists\n",
-    "    #pprint(links)\n",
     "\n",
     "    if not links:\n",
     "        print('No matching files found to download.')\n",
@@ -240,7 +234,6 @@
     "    for link in links:\n",
     "        file_url = urljoin(base_url, link)\n",
     "        file_path = os.path.join(folder, os.path.basename(link))\n",
-    "\n",
     "        #print(f'Downloading: {file_url}')\n",
     "\n",
     "        with requests.get(file_url, stream=True) as file_response:\n",
@@ -317,7 +310,7 @@
     "raster_path.mkdir(parents=True, exist_ok=True)\n",
     "target_folder = raster_path\n",
     "\n",
-    "# Download\n",
+    "# Download data\n",
     "from tqdm import tqdm\n",
     "for location in tqdm(download_locations,\n",
     "                     desc='',\n",
@@ -338,14 +331,10 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "31db0912-0a46-4d74-adc0-3ef4aeb21651",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def list_of_files(folder, file_type='.gz'):\n",
+    "def list_of_files(folder:str, file_type='.gz'):\n",
     "    '''\n",
     "    Returns list containing all filesnames in folder with the ending file_type.\n",
     "\n",
@@ -366,16 +355,14 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "cd39d8d3-99a1-40fc-9350-eda11edfe561",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def rename_dwd_file(file:str):\n",
     "        \"\"\"\n",
-    "        Rename dwd files to remove everything except for the core name and the year\n",
+    "        Takes filename as string as input.\n",
+    "        Removes everything except for the core name and the year from the dwd filename.\n",
+    "        Returns new filename as string.\n",
     "        \"\"\"\n",
     "        file = file.replace('grids_germany_annual_', '')\n",
     "        file = file.removesuffix('.asc.gz')\n",
@@ -393,14 +380,10 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "daee8dfb-7fad-4697-9188-159f50934419",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def decompress_file(file):\n",
+    "def decompress_file(file:str):\n",
     "    \"\"\"\n",
     "    Decompress files and saves a copy in the same folder.\n",
     "\n",
@@ -431,7 +414,7 @@
     "\n",
     "    # Unpack the mis‑labelled “…asc.gz” archive (which is really a ZIP)\n",
     "    elif ft_ext == 'zip':\n",
-    "        decompressed_file = Path(rename_dwd_file(file))               # Name for output file\n",
+    "        decompressed_file = Path(rename_dwd_file(file))         # Name for output file\n",
     "        zip_path = Path(file).expanduser().resolve()\n",
     "    \n",
     "        with zipfile.ZipFile(zip_path) as zf:\n",
@@ -456,14 +439,10 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "e1d7ef3b-0b3d-428d-bd3c-9debb017b865",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def asc_to_tif_add_crs(asc_input: str, prj_txt: str):\n",
+    "def asc_to_tif_add_crs(asc_input:str, prj_txt:str):\n",
     "    \"\"\"\n",
     "    Takes asc_input, adds crs (from prj.txt), saves it as .tif in the same folder.\n",
     "\n",
@@ -510,19 +489,15 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "5cc12932-cd16-4180-91ec-0b2a8cdfa63a",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def delete_raster_files(folder_path: str):\n",
+    "def delete_raster_files(folder_path:str):\n",
     "    \"\"\"\n",
-    "    Löscht alle .asc, .asc.gz und .zip Dateien im angegebenen Ordner (nicht rekursiv).\n",
+    "    Deletes all .asc, .asc.gz and .zip files within the folder..\n",
     "\n",
     "    Args:\n",
-    "        folder_path (str): Pfad zum Ordner, in dem die Dateien gelöscht werden sollen.\n",
+    "        folder_path (str): Path to folder containing the files.\n",
     "    \"\"\"\n",
     "    \n",
     "    from pathlib import Path\n",
@@ -541,14 +516,10 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "55748775-bea6-483a-926b-18bef2b976d3",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def change_shp_crs(shp_input: str, prj_txt: str):\n",
+    "def change_shp_crs(shp_input:str, prj_txt:str):\n",
     "    \"\"\"\n",
     "    Takes shp_input, transforms to crs (from prj.txt), outputs as shp_output\n",
     "\n",
@@ -595,16 +566,12 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "a2e9b97b-fc56-48a2-a5e9-ddb1c1090045",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_zonal_stats(shp: str, tif: str):\n",
+    "def calculate_zonal_stats(shp:str, tif:str):\n",
     "    \"\"\"\n",
-    "    Calculates zonal stats of the tif for each poly in the shp.\n",
+    "    Calculates zonal stats of the tif for each feature in the shp.\n",
     "\n",
     "    Args:\n",
     "        shp (str): path to shp file\n",
@@ -617,9 +584,8 @@
     "    from pprint import pprint\n",
     "    from rasterstats import zonal_stats\n",
     "\n",
-    "    stats = zonal_stats(shp, tif, all_touched=True) # TRUE? FALSE??\n",
-    "\n",
-    "    #pprint(stats)\n",
+    "    # Set all_touched to False if you want to include only raster-cells that are completely within the shapefile.\n",
+    "    stats = zonal_stats(shp, tif, all_touched=True)\n",
     "\n",
     "    return stats"
    ]
@@ -628,14 +594,10 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "dc251bbb-8564-4920-bcda-c3f8483ae957",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def lokal_climate_analysis(shp_input:str, raster_folder: str, prj_file: str):\n",
+    "def zonal_climate_analysis(shp_input:str, raster_folder:str, prj_file:str):\n",
     "    \"\"\"\n",
     "    Perform rasterstats calculation on shp_input with every raster file in the raster_folder.\n",
     "\n",
@@ -731,11 +693,7 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "8e7059d7-f75d-42fb-b836-8036f0f71770",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -786,7 +744,7 @@
     "raster_path = str(Path.cwd() / 'climate_environment_CDC_grids_germany_annual')\n",
     "prj_file = 'gk3.prj'\n",
     "\n",
-    "rasterstats_json = lokal_climate_analysis(shp, raster_path, prj_file) # shp comes from get_shp() in the beginning of this program"
+    "rasterstats_json = zonal_climate_analysis(shp, raster_path, prj_file) # shp comes from get_shp() in the beginning of this program"
    ]
   },
   {
@@ -794,18 +752,14 @@
    "id": "ad0b6bc2-c6a5-417d-bbcf-28914cd256c5",
    "metadata": {},
    "source": [
-    "# Visualizer"
+    "# Visualize"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
    "id": "3d05de81-fc83-4449-a937-90a60c9f08ce",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -822,7 +776,7 @@
     "import json\n",
     "from pprint import pprint\n",
     "import matplotlib\n",
-    "matplotlib.use('Agg')  # Use a non-GUI backend. prevents QSocketNotifier: Can only be used with threads started with QThread message in cmd\n",
+    "matplotlib.use('Agg')  # Use a non-GUI backend. Prevents \"QSocketNotifier: Can only be used with threads started with QThread\" message in cmd.\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
@@ -833,22 +787,18 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "e25f6efb-7a6a-48b9-ade5-228a3de15da7",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "input_file = rasterstats_json # Created with lokal_climate_analysis(shp_input, raster_folder, prj_file)\n",
+    "input_file = rasterstats_json # Created with zonal_climate_analysis(shp_input, raster_folder, prj_file)\n",
     "\n",
     "import json\n",
     "\n",
     "# Open rasterstats_dict.json file\n",
     "with open(input_file) as json_file:\n",
-    "    rs = json.load(json_file) # rs stands for rasterstats\n",
+    "    rs = json.load(json_file)\n",
     "\n",
-    "# how to access information: rs['summer_days']['2024'][0]['mean']"
+    "# How to access information: eg. rs['summer_days']['2024'][0]['mean']"
    ]
   },
   {
@@ -1606,7 +1556,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.3"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
