--- a/ZonalClimateAnalyzer.ipynb
+++ b/ZonalClimateAnalyzer.ipynb
@@ -541,8 +541,12 @@
     "    # Transform shp_input to target_crs\n",
     "    gdf_transformed = gdf.to_crs(target_crs)\n",
     "\n",
+    "    # Create Output Folder\n",
+    "    shp_folder_path = Path.cwd() / 'shp'\n",
+    "    shp_folder_path.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
     "    # Define Output name\n",
-    "    shp_output = str(Path.cwd() / Path(str(shp_input).replace('.shp', '')+'_'+str(target_crs).replace(':','')+'.shp').name)\n",
+    "    shp_output = str(plot_folder_path / Path(str(shp_input).replace('.shp', '')+'_'+str(target_crs).replace(':','')+'.shp').name)\n",
     "\n",
     "    # Save transformed shp to shp_output\n",
     "    gdf_transformed.to_file(shp_output, encoding='utf-8')\n",
