fixed but where pyprioj crs tool was used instead of the rasterio crs tool. reordered package import for better readability

--- a/ZonalClimateAnalyzer.ipynb
+++ b/ZonalClimateAnalyzer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e57ced7c-8cb8-4d42-9799-5578dc44c5c9",
    "metadata": {},
    "outputs": [],
@@ -13,25 +13,26 @@
     "import shutil\n",
     "import zipfile\n",
     "import gzip\n",
+    "import filetype\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "from tqdm import tqdm\n",
+    "from pprint import pprint\n",
     "\n",
     "from urllib.parse import urljoin\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "\n",
-    "from tqdm import tqdm\n",
-    "from pprint import pprint\n",
-    "\n",
-    "import numpy as np\n",
-    "import matplotlib\n",
-    "import matplotlib.pyplot as plt\n",
     "import folium\n",
-    "\n",
     "import geopandas as gpd\n",
     "from pyproj import CRS\n",
     "import rasterio\n",
     "from rasterio.crs import CRS\n",
     "from rasterstats import zonal_stats\n",
-    "import filetype"
+    "\n",
+    "import matplotlib\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -44,13 +45,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "id": "0867040f-bfbc-4373-aa08-aca3eff1645a",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def check_crs(shapefile:str):\n",
@@ -76,13 +73,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "id": "fc0f1783-cd16-4134-99d5-3e3bf23eb2a2",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -90,7 +83,8 @@
      "text": [
       "\n",
       "This Program lets you analyze the climate history of any area within Germany.\n",
-      "You only need a shapefile defining the area you want to analyze.\n"
+      "You only need a shapefile defining the area you want to analyze.\n",
+      "The shapefile needs to have exactly one polygon feature and a valid coordinate reference system (CRS) assigned to it.\n"
      ]
     },
     {
@@ -98,7 +92,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Enter the path to the shapefile:  /home/luser/Documents/QGis/Data/Berlin/plz12047_stadtteil_berlin_kreuzberg.shp\n"
+      "Enter the path to the shapefile:  /home/luser/Documents/Grundstücke/grundstuecke/31_4102.shp\n"
      ]
     },
     {
@@ -123,6 +117,7 @@
     "    while True:  # This function runs until input is valid\n",
     "        print('\\nThis Program lets you analyze the climate history of any area within Germany.')\n",
     "        print('You only need a shapefile defining the area you want to analyze.')\n",
+    "        print('The shapefile needs to have exactly one polygon feature and a valid coordinate reference system (CRS) assigned to it.')\n",
     "        shp_input = input('\\nEnter the path to the shapefile: ').strip()\n",
     "        shp_path = Path(shp_input)\n",
     "\n",
@@ -134,7 +129,7 @@
     "                # Check if CRS is defined\n",
     "                if gdf.crs:\n",
     "                    try:\n",
-    "                        crs = CRS(gdf.crs)\n",
+    "                        crs = gdf.crs\n",
     "                        print(f'Valid shapefile with valid CRS found.\\n')\n",
     "                        return shp_path\n",
     "                    except Exception as e:\n",
@@ -863,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
    "id": "8b040b01-9f9f-4122-945d-64ceb9abf44c",
    "metadata": {
     "jupyter": {
@@ -918,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "id": "c357741f-2315-488e-8043-423d7ce09751",
    "metadata": {
     "jupyter": {
@@ -1005,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "id": "195673e1-5b8f-4cf9-9560-64bce71bcc2d",
    "metadata": {
     "jupyter": {
@@ -1079,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "id": "759343ea-09b3-4ec6-a1bb-971b743e586d",
    "metadata": {
     "jupyter": {
@@ -1148,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "id": "283e11ed-ecde-4c8a-9e64-a156828764ba",
    "metadata": {
     "jupyter": {
@@ -1222,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 24,
    "id": "df8dc0a4-bd90-4997-9a38-705e7c4d38a7",
    "metadata": {
     "jupyter": {
@@ -1287,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 25,
    "id": "b20af0d3-8b61-47a8-9e45-6e5e425b3ef8",
    "metadata": {
     "jupyter": {
@@ -1365,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 26,
    "id": "0f6d6089-1fda-4817-b256-04138157dd55",
    "metadata": {
     "jupyter": {
@@ -1426,7 +1421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 27,
    "id": "34ce0b69-308c-46cb-a348-672498dedc2d",
    "metadata": {
     "jupyter": {
@@ -1503,7 +1498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 28,
    "id": "2412da44-0535-4599-9581-efe9b4e50e01",
    "metadata": {
     "jupyter": {
@@ -1578,7 +1573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 29,
    "id": "737a075b-6060-46d4-89b0-fb9b050604b7",
    "metadata": {
     "jupyter": {
