shorter and clearer get_shp function

--- a/ZonalClimateAnalyzer.ipynb
+++ b/ZonalClimateAnalyzer.ipynb
@@ -47,7 +47,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "0867040f-bfbc-4373-aa08-aca3eff1645a",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "def check_crs(shapefile:str):\n",
@@ -92,7 +96,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Enter the path to the shapefile:  /home/luser/Documents/Grundstücke/grundstuecke/31_4102.shp\n"
+      "Enter the path to the shapefile:  /home/luser/Documents/Grundstücke/grundstuecke/2_206.shp\n"
      ]
     },
     {
@@ -114,31 +118,24 @@
     "    Returns path to the shapefile if Valid shp and CRS are found.\n",
     "    '''\n",
     "\n",
+    "    print('\\nThis Program lets you analyze the climate history of any area within Germany.')\n",
+    "    print('You only need a shapefile defining the area you want to analyze.')\n",
+    "    print('The shapefile needs to have exactly one polygon feature and a valid coordinate reference system (CRS) assigned to it.')\n",
+    "\n",
     "    while True:  # This function runs until input is valid\n",
-    "        print('\\nThis Program lets you analyze the climate history of any area within Germany.')\n",
-    "        print('You only need a shapefile defining the area you want to analyze.')\n",
-    "        print('The shapefile needs to have exactly one polygon feature and a valid coordinate reference system (CRS) assigned to it.')\n",
     "        shp_input = input('\\nEnter the path to the shapefile: ').strip()\n",
     "        shp_path = Path(shp_input)\n",
     "\n",
     "        # If the input is a file path\n",
-    "        if shp_path.is_file() and shp_path.suffix == '.shp':\n",
+    "        if shp_path.is_file() and shp_path.suffix.lower() == '.shp':\n",
     "            try:\n",
     "                gdf = gpd.read_file(shp_path)\n",
-    "\n",
-    "                # Check if CRS is defined\n",
     "                if gdf.crs:\n",
-    "                    try:\n",
-    "                        crs = gdf.crs\n",
-    "                        print(f'Valid shapefile with valid CRS found.\\n')\n",
-    "                        return shp_path\n",
-    "                    except Exception as e:\n",
-    "                        print(f'Shapefile found, but CRS is invalid: {e}\\n')\n",
-    "                        continue\n",
+    "                    print('Valid shapefile with valid CRS found.\\n')\n",
+    "                    return shp_path\n",
     "                else:\n",
     "                    print('Shapefile found, but CRS is not defined.\\n')\n",
     "                    continue\n",
-    "\n",
     "            except Exception as e:\n",
     "                print(f'Error reading shapefile: {e}\\n')\n",
     "                continue\n",
