--- a/ZonalClimateAnalyzer.ipynb
+++ b/ZonalClimateAnalyzer.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "e57ced7c-8cb8-4d42-9799-5578dc44c5c9",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
@@ -100,7 +104,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Enter the path to the shapefile:  /home/luser/Documents/Grundstücke/grundstuecke/2_206.shp\n"
+      "Enter the path to the shapefile:  /home/luser/Documents/QGis/Data/Berlin/bezirksgrenzen.shp/bezirksgrenzen.shp\n"
      ]
     },
     {
@@ -550,7 +554,7 @@
     "    shp_folder_path = Path.cwd() / 'shp'\n",
     "    shp_folder_path.mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "    # Define Output name\n",
+    "    # Define output name\n",
     "    shp_output = str(shp_folder_path / Path(str(shp_input).replace('.shp', '')+'_'+str(target_crs).replace(':','')+'.shp').name)\n",
     "\n",
     "    # Save transformed shp to shp_output\n",
@@ -564,6 +568,47 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "8db26026-7aad-4eb2-bd82-2d98c2c2636a",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def dissolve_shp(shp_input:str):\n",
+    "    \"\"\"\n",
+    "    Takes shp_input, dissolve all polygon features into one, outputs as dissolved_shp\n",
+    "\n",
+    "    Args:\n",
+    "        shp_input (str): path to shp file (input file)\n",
+    "    \n",
+    "    Returns:\n",
+    "        shp_output (str): path/to/output.tif file\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Read Shapefile\n",
+    "    gdf = gpd.read_file(shp_input)\n",
+    "\n",
+    "    # Dissolve features in gdf\n",
+    "    gdf_dissolved = gdf.dissolve()\n",
+    "\n",
+    "    # Create Output Folder\n",
+    "    shp_folder_path = Path.cwd() / 'shp'\n",
+    "    shp_folder_path.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "    # Define output name\n",
+    "    shp_output = str(shp_folder_path / Path(str(shp_input).replace('.shp', '')+'_dissolved'+'.shp').name)\n",
+    "\n",
+    "    # Save transformed shp to shp_output\n",
+    "    gdf_dissolved.to_file(shp_output, encoding='utf-8')\n",
+    "    \n",
+    "    return shp_output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "a2e9b97b-fc56-48a2-a5e9-ddb1c1090045",
    "metadata": {
     "jupyter": {
@@ -592,9 +637,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "dc251bbb-8564-4920-bcda-c3f8483ae957",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "def zonal_climate_analysis(shp_input:str, raster_folder:str, prj_file:str):\n",
@@ -610,11 +659,13 @@
     "        rasterstats_dict (dict{str:[{}]}): dict containing the name of the raster file as key and the corresponding rasterstats as a list of dicts as values.\n",
     "    Returns:\n",
     "        json_output_path_name (str): path to the created json file conatining rasterstats calculations.\n",
+    "        shp_crs_dissolved (str): path to the dissolved shapefile with transformed crs the rasterstats where calculated on.\n",
     "    \"\"\"\n",
     "\n",
     "    # Prepare shapefile:\n",
-    "    change_shp_crs(shp_input, prj_file)\n",
-    "\n",
+    "    shp_crs = change_shp_crs(shp_input, prj_file)\n",
+    "    shp_crs_dissolved = dissolve_shp(shp_crs)\n",
+    "    \n",
     "    # Create list of compessed .asc.gz rasterfiles:\n",
     "    files_asc_gz = list_of_files(raster_folder, file_type='.asc.gz')\n",
     "\n",
@@ -640,9 +691,6 @@
     "    # Create list .tif rasterfiles\n",
     "    files_tif = list_of_files(raster_folder, file_type='.tif')\n",
     "\n",
-    "    # Shapefile to perform ratserstats calculations on:\n",
-    "    shapefile = change_shp_crs(shp_input, prj_file)\n",
-    "\n",
     "    # Create list containing rasterstats:\n",
     "    rasterstats_list = []\n",
     "\n",
@@ -652,7 +700,7 @@
     "                  desc='',\n",
     "                  bar_format='{l_bar}{bar:40}| ({n_fmt}/{total_fmt}) Calculating rasterstats.',\n",
     "                  ncols=120):\n",
-    "        rasterstats_list.append(calculate_zonal_stats(shapefile, f)) # Append rasterstats to rasterstats_list\n",
+    "        rasterstats_list.append(calculate_zonal_stats(shp_crs_dissolved, f)) # Append rasterstats to rasterstats_list\n",
     "\n",
     "    # Combine rasterstats and the name of the raster the stats are calculated with\n",
     "    raster_path = str(Path.cwd() / 'climate_environment_CDC_grids_germany_annual')\n",
@@ -677,19 +725,19 @@
     "    #pprint(rasterstats_json)\n",
     "\n",
     "    # Export dict as json:\n",
-    "    path_to_shp = Path(shapefile)\n",
+    "    path_to_shp = Path(shp_crs_dissolved)\n",
     "    shp_name = path_to_shp.name\n",
     "    json_output_path_name = shp_name.replace('.shp','')+'_rasterstats.json'\n",
     "    \n",
     "    with open(json_output_path_name, 'w') as rs_json:\n",
     "        json.dump(rasterstats_json, rs_json)\n",
     "\n",
-    "    return json_output_path_name"
+    "    return json_output_path_name, shp_crs_dissolved"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "8e7059d7-f75d-42fb-b836-8036f0f71770",
    "metadata": {
     "jupyter": {
@@ -746,7 +794,7 @@
     "raster_path = str(Path.cwd() / 'climate_environment_CDC_grids_germany_annual')\n",
     "prj_file = 'gk3.prj'\n",
     "\n",
-    "rasterstats_json = zonal_climate_analysis(shp, raster_path, prj_file) # shp comes from get_shp() in the beginning of this program"
+    "rasterstats_json, shp_crs_dissolved = zonal_climate_analysis(shp, raster_path, prj_file) # shp comes from get_shp() in the beginning of this program"
    ]
   },
   {
@@ -759,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "3d05de81-fc83-4449-a937-90a60c9f08ce",
    "metadata": {
     "jupyter": {
@@ -783,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "e25f6efb-7a6a-48b9-ade5-228a3de15da7",
    "metadata": {
     "jupyter": {
@@ -803,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "e1185a48-1f1d-4dc2-8359-8e8d07ed63be",
    "metadata": {
     "jupyter": {
@@ -855,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "8b040b01-9f9f-4122-945d-64ceb9abf44c",
    "metadata": {
     "jupyter": {
@@ -863,6 +911,14 @@
     }
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/luser/.local/lib/python3.13/site-packages/mapclassify/classifiers.py:10: UserWarning: A NumPy version >=1.23.5 and <2.3.0 is required for this version of SciPy (detected version 2.3.2)\n",
+      "  import scipy.stats as stats\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -905,12 +961,12 @@
     "    m.save(map_path)\n",
     "    print(f'Successfully created and saved map: {mapname}')\n",
     "\n",
-    "create_map(shp)"
+    "create_map(shp_crs_dissolved)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "c357741f-2315-488e-8043-423d7ce09751",
    "metadata": {
     "jupyter": {
@@ -997,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "195673e1-5b8f-4cf9-9560-64bce71bcc2d",
    "metadata": {
     "jupyter": {
@@ -1071,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "759343ea-09b3-4ec6-a1bb-971b743e586d",
    "metadata": {
     "jupyter": {
@@ -1140,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "283e11ed-ecde-4c8a-9e64-a156828764ba",
    "metadata": {
     "jupyter": {
@@ -1214,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 25,
    "id": "df8dc0a4-bd90-4997-9a38-705e7c4d38a7",
    "metadata": {
     "jupyter": {
@@ -1280,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "b20af0d3-8b61-47a8-9e45-6e5e425b3ef8",
    "metadata": {
     "jupyter": {
@@ -1358,7 +1414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 27,
    "id": "0f6d6089-1fda-4817-b256-04138157dd55",
    "metadata": {
     "jupyter": {
@@ -1420,9 +1476,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 28,
    "id": "34ce0b69-308c-46cb-a348-672498dedc2d",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1505,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "2412da44-0535-4599-9581-efe9b4e50e01",
    "metadata": {
     "jupyter": {
@@ -1580,7 +1640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "737a075b-6060-46d4-89b0-fb9b050604b7",
    "metadata": {
     "jupyter": {
@@ -1603,6 +1663,22 @@
     "plot_folder_path = Path.cwd() / 'plots'\n",
     "print(f'\\nFinished! Plots saved here: \\n{plot_folder_path}\\n')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0573b66e-5017-44a9-9507-93d4ae20a2cb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24f86fce-307d-46e5-8c3a-c1b082da57d5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1621,7 +1697,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.13.3"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
