added todo comment with idea for restructuring the  dwd download function

--- a/ZonalClimateAnalyzer.ipynb
+++ b/ZonalClimateAnalyzer.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "8adafad2-baf5-4b3a-b918-308dcb7a9e81",
    "metadata": {
     "jupyter": {
@@ -196,7 +196,8 @@
     "\n",
     "    Example: download_dwd_data('/home/user/Documents/Folder', 'https://opendata.dwd.de/climate_environment/CDC/grids_germany/annual/vegetation_end/', '.pdf')\n",
     "    '''\n",
-    "\n",
+    "    \n",
+    "    # TODO: Restructure. Split into two functions. One to get a list of links to all single files to download. One to iterate over this list and download each file.\n",
     "    # TODO: Implement a test if data is already in folder and then skip\n",
     "\n",
     "    # Create folder if it doesn't exist yet\n",
@@ -235,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "1dd37671-e5dd-4814-a355-5f388719f56b",
    "metadata": {
     "jupyter": {
