better messages in terminal

--- a/ZonalClimateAnalyzer.ipynb
+++ b/ZonalClimateAnalyzer.ipynb
@@ -86,11 +86,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "fc0f1783-cd16-4134-99d5-3e3bf23eb2a2",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_shp():\n",
@@ -102,7 +98,8 @@
     "    Returns path to the shapefile if Valid shp and CRS are found.\n",
     "    '''\n",
     "\n",
-    "    print('\\nThis Program lets you analyze the climate history of any area within Germany.')\n",
+    "    print('\\n'+'#'*64)\n",
+    "    print('This Program lets you analyze the climate history of any area within Germany.')\n",
     "    print('You only need a shapefile defining the area you want to analyze.')\n",
     "\n",
     "    while True:  # This function runs until input is valid\n",
@@ -1603,7 +1600,8 @@
     "plot_vegetation_begin_end()\n",
     "plot_vegetation_phase_length()\n",
     "\n",
-    "print(f'\\nFinished! Map and plots saved here: \\n{Path.cwd() / 'output'}\\n')"
+    "print('\\nFinished!')\n",
+    "print(f'Map and plots saved here: \\n{Path.cwd() / 'output'}\\n')"
    ]
   }
  ],
