--- a/ZonalClimateAnalyzer.ipynb
+++ b/ZonalClimateAnalyzer.ipynb
@@ -293,8 +293,6 @@
     "    Returns:\n",
     "        None\n",
     "    \"\"\"\n",
-    "\n",
-    "    # TODO: Implement a test if data is already in folder and then skip\n",
     "    \n",
     "    dest = Path(dest_dir)\n",
     "    dest.mkdir(parents=True, exist_ok=True)\n",
@@ -645,7 +643,11 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "dc251bbb-8564-4920-bcda-c3f8483ae957",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "def zonal_climate_analysis(shp_input:str, raster_folder:str, prj_file:str):\n",
