optup files(maps and plots) are now named after the shapefile they analyzed. this makes the workflow of analyzing several files way easier

--- a/ZonalClimateAnalyzer.ipynb
+++ b/ZonalClimateAnalyzer.ipynb
@@ -815,7 +815,7 @@
    },
    "outputs": [],
    "source": [
-    "def create_map(shapefile:str):\n",
+    "def create_map(shapefile:str, shp_name:str):\n",
     "    '''\n",
     "    Takes path to shapefile as string as input.\n",
     "    Creates interactive map as html.\n",
@@ -841,7 +841,7 @@
     "    )\n",
     "    \n",
     "    # Save Map\n",
-    "    mapname = 'map.html'\n",
+    "    mapname = shp_name+'_'+'map.html'\n",
     "    map_folder_path = Path.cwd() / 'output'\n",
     "    map_folder_path.mkdir(parents=True, exist_ok=True)\n",
     "    map_path = str(map_folder_path / mapname)\n",
@@ -860,7 +860,7 @@
    },
    "outputs": [],
    "source": [
-    "def plot_air_temp_min_mean_max():\n",
+    "def plot_air_temp_min_mean_max(shp_name:str):\n",
     "    # Air Temp min mean max\n",
     "    plt.close()\n",
     "\n",
@@ -919,7 +919,7 @@
     "            label.set_visible(False)\n",
     "\n",
     "    # Save Plot\n",
-    "    plotname = 'min_mean_max_temp'+'_plot.png'\n",
+    "    plotname = shp_name+'_'+'min_mean_max_temp'+'_plot.png'\n",
     "    plot_folder_path = Path.cwd() / 'output'\n",
     "    plot_folder_path.mkdir(parents=True, exist_ok=True)\n",
     "    plot_path = str(plot_folder_path / plotname)\n",
@@ -938,7 +938,7 @@
    },
    "outputs": [],
    "source": [
-    "def plot_frost_ice_days():\n",
+    "def plot_frost_ice_days(shp_name:str):\n",
     "    # Frost and Ice Days\n",
     "    plt.close()\n",
     "\n",
@@ -984,7 +984,7 @@
     "            label.set_visible(False)\n",
     "\n",
     "    # Save Plot\n",
-    "    plotname = 'ice_frost_days'+'_plot.png'\n",
+    "    plotname = shp_name+'_'+'ice_frost_days'+'_plot.png'\n",
     "    plot_folder_path = Path.cwd() / 'output'\n",
     "    plot_folder_path.mkdir(parents=True, exist_ok=True)\n",
     "    plot_path = str(plot_folder_path / plotname)\n",
@@ -1003,7 +1003,7 @@
    },
    "outputs": [],
    "source": [
-    "def plot_snowcover_days():\n",
+    "def plot_snowcover_days(shp_name:str):\n",
     "    # Snowcover Days\n",
     "    plt.close()\n",
     "\n",
@@ -1044,7 +1044,7 @@
     "            label.set_visible(False)\n",
     "\n",
     "    # Save Plot\n",
-    "    plotname = 'snowcover_days'+'_plot.png'\n",
+    "    plotname = shp_name+'_'+'snowcover_days'+'_plot.png'\n",
     "    plot_folder_path = Path.cwd() / 'output'\n",
     "    plot_folder_path.mkdir(parents=True, exist_ok=True)\n",
     "    plot_path = str(plot_folder_path / plotname)\n",
@@ -1063,7 +1063,7 @@
    },
    "outputs": [],
    "source": [
-    "def plot_summer_hot_days():\n",
+    "def plot_summer_hot_days(shp_name:str):\n",
     "    # Summer and Hot Days\n",
     "    plt.close()\n",
     "\n",
@@ -1109,7 +1109,7 @@
     "            label.set_visible(False)\n",
     "\n",
     "    # Save Plot\n",
-    "    plotname = 'summer_hot_days'+'_plot.png'\n",
+    "    plotname = shp_name+'_'+'summer_hot_days'+'_plot.png'\n",
     "    plot_folder_path = Path.cwd() / 'output'\n",
     "    plot_folder_path.mkdir(parents=True, exist_ok=True)\n",
     "    plot_path = str(plot_folder_path / plotname)\n",
@@ -1128,7 +1128,7 @@
    },
    "outputs": [],
    "source": [
-    "def plot_precipitaion():\n",
+    "def plot_precipitaion(shp_name:str):\n",
     "    # Precipitation\n",
     "    plt.close()\n",
     "\n",
@@ -1166,7 +1166,7 @@
     "            label.set_visible(False)\n",
     "\n",
     "    # Save Plot\n",
-    "    plotname = 'precipitation_drought'+'_plot.png'\n",
+    "    plotname = shp_name+'_'+'precipitation_drought'+'_plot.png'\n",
     "    plot_folder_path = Path.cwd() / 'output'\n",
     "    plot_folder_path.mkdir(parents=True, exist_ok=True)\n",
     "    plot_path = str(plot_folder_path / plotname)\n",
@@ -1185,7 +1185,7 @@
    },
    "outputs": [],
    "source": [
-    "def plot_precipitaion_days():\n",
+    "def plot_precipitaion_days(shp_name:str):\n",
     "    # Precipitation Days\n",
     "    plt.close()\n",
     "\n",
@@ -1235,7 +1235,7 @@
     "            label.set_visible(False)\n",
     "\n",
     "    # Save Plot\n",
-    "    plotname = 'precip_days'+'_plot.png'\n",
+    "    plotname = shp_name+'_'+'precip_days'+'_plot.png'\n",
     "    plot_folder_path = Path.cwd() / 'output'\n",
     "    plot_folder_path.mkdir(parents=True, exist_ok=True)\n",
     "    plot_path = str(plot_folder_path / plotname)\n",
@@ -1254,7 +1254,7 @@
    },
    "outputs": [],
    "source": [
-    "def plot_sunshine_duration():\n",
+    "def plot_sunshine_duration(shp_name:str):\n",
     "    # Sunshine Duration\n",
     "    plt.close()\n",
     "\n",
@@ -1288,7 +1288,7 @@
     "            label.set_visible(False)\n",
     "\n",
     "    # Save Plot\n",
-    "    plotname = 'sunshine_duration'+'_plot.png'\n",
+    "    plotname = shp_name+'_'+'sunshine_duration'+'_plot.png'\n",
     "    plot_folder_path = Path.cwd() / 'output'\n",
     "    plot_folder_path.mkdir(parents=True, exist_ok=True)\n",
     "    plot_path = str(plot_folder_path / plotname)\n",
@@ -1307,7 +1307,7 @@
    },
    "outputs": [],
    "source": [
-    "def plot_vegetation_begin_end():\n",
+    "def plot_vegetation_begin_end(shp_name:str):\n",
     "    # Vegetation begin and vegetation end\n",
     "    plt.close()\n",
     "\n",
@@ -1368,7 +1368,7 @@
     "    ax2.set_ylabel(\"Monatsbeginn\")\n",
     "\n",
     "    # Save Plot\n",
-    "    plotname = 'vegetativ_phase'+'_plot.png'\n",
+    "    plotname = shp_name+'_'+'vegetativ_phase'+'_plot.png'\n",
     "    plot_folder_path = Path.cwd() / 'output'\n",
     "    plot_folder_path.mkdir(parents=True, exist_ok=True)\n",
     "    plot_path = str(plot_folder_path / plotname)\n",
@@ -1387,7 +1387,7 @@
    },
    "outputs": [],
    "source": [
-    "def plot_vegetation_phase_length():\n",
+    "def plot_vegetation_phase_length(shp_name:str):\n",
     "    # Vegetation phase length\n",
     "    plt.close()\n",
     "\n",
@@ -1434,7 +1434,7 @@
     "            label.set_visible(False)\n",
     "\n",
     "    # Save Plot\n",
-    "    plotname = 'vegetativ_phase_len'+'_plot.png'\n",
+    "    plotname = shp_name+'_'+'vegetativ_phase_len'+'_plot.png'\n",
     "    plot_folder_path = Path.cwd() / 'output'\n",
     "    plot_folder_path.mkdir(parents=True, exist_ok=True)\n",
     "    plot_path = str(plot_folder_path / plotname)\n",
@@ -1476,7 +1476,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Enter the path to the shapefile here:  /home/luser/Documents/Grundstücke/grundstuecke/31_4102.shp\n"
+      "Enter the path to the shapefile here:  /home/luser/Documents/Grundstücke/grundstuecke/3_75.shp\n"
      ]
     },
     {
@@ -1499,7 +1499,11 @@
    "cell_type": "code",
    "execution_count": 29,
    "id": "1142e3bc-5a8d-4932-8100-4d7321ad4174",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1532,7 +1536,11 @@
    "cell_type": "code",
    "execution_count": 30,
    "id": "8e7059d7-f75d-42fb-b836-8036f0f71770",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1543,7 +1551,7 @@
       "\n",
       "All files are already decompressed.\n",
       "\n",
-      "All files are already decompressed.\n"
+      "All files are already transformed to the right data format.\n"
      ]
     },
     {
@@ -1569,7 +1577,11 @@
    "cell_type": "code",
    "execution_count": 31,
    "id": "e25f6efb-7a6a-48b9-ade5-228a3de15da7",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# Load Rasterstats JSON\n",
@@ -1601,16 +1613,16 @@
      "text": [
       "\n",
       "Creating Map and Plots:\n",
-      "Successfully created and saved map: map.html\n",
-      "Successfully created and saved plot: min_mean_max_temp_plot.png\n",
-      "Successfully created and saved plot: ice_frost_days_plot.png\n",
-      "Successfully created and saved plot: snowcover_days_plot.png\n",
-      "Successfully created and saved plot: summer_hot_days_plot.png\n",
-      "Successfully created and saved plot: precipitation_drought_plot.png\n",
-      "Successfully created and saved plot: precip_days_plot.png\n",
-      "Successfully created and saved plot: sunshine_duration_plot.png\n",
-      "Successfully created and saved plot: vegetativ_phase_plot.png\n",
-      "Successfully created and saved plot: vegetativ_phase_len_plot.png\n",
+      "Successfully created and saved map: 3_75_map.html\n",
+      "Successfully created and saved plot: 3_75_min_mean_max_temp_plot.png\n",
+      "Successfully created and saved plot: 3_75_ice_frost_days_plot.png\n",
+      "Successfully created and saved plot: 3_75_snowcover_days_plot.png\n",
+      "Successfully created and saved plot: 3_75_summer_hot_days_plot.png\n",
+      "Successfully created and saved plot: 3_75_precipitation_drought_plot.png\n",
+      "Successfully created and saved plot: 3_75_precip_days_plot.png\n",
+      "Successfully created and saved plot: 3_75_sunshine_duration_plot.png\n",
+      "Successfully created and saved plot: 3_75_vegetativ_phase_plot.png\n",
+      "Successfully created and saved plot: 3_75_vegetativ_phase_len_plot.png\n",
       "\n",
       "Finished!\n",
       "Map and plots are saved here: \n",
@@ -1625,19 +1637,22 @@
     "print('\\nCreating Map and Plots:')\n",
     "matplotlib.use('Agg')  # Use a non-GUI backend. Prevents \"QSocketNotifier: Can only be used with threads started with QThread\" message in cmd.\n",
     "\n",
+    "\n",
+    "shp_name = shp.stem\n",
+    "\n",
     "# Create Map\n",
-    "create_map(shp_crs_dissolved)\n",
+    "create_map(shp_crs_dissolved, shp_name)\n",
     "\n",
     "# Create Plots\n",
-    "plot_air_temp_min_mean_max()\n",
-    "plot_frost_ice_days()\n",
-    "plot_snowcover_days()\n",
-    "plot_summer_hot_days()\n",
-    "plot_precipitaion()\n",
-    "plot_precipitaion_days()\n",
-    "plot_sunshine_duration()\n",
-    "plot_vegetation_begin_end()\n",
-    "plot_vegetation_phase_length()\n",
+    "plot_air_temp_min_mean_max(shp_name)\n",
+    "plot_frost_ice_days(shp_name)\n",
+    "plot_snowcover_days(shp_name)\n",
+    "plot_summer_hot_days(shp_name)\n",
+    "plot_precipitaion(shp_name)\n",
+    "plot_precipitaion_days(shp_name)\n",
+    "plot_sunshine_duration(shp_name)\n",
+    "plot_vegetation_begin_end(shp_name)\n",
+    "plot_vegetation_phase_length(shp_name)\n",
     "\n",
     "print('\\nFinished!')\n",
     "print(f'Map and plots are saved here: \\n{Path.cwd() / 'output'}\\n')"
