better terminal messages

--- a/ZonalClimateAnalyzer.ipynb
+++ b/ZonalClimateAnalyzer.ipynb
@@ -643,11 +643,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "dc251bbb-8564-4920-bcda-c3f8483ae957",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def zonal_climate_analysis(shp_input:str, raster_folder:str, prj_file:str):\n",
@@ -674,13 +670,13 @@
     "    files_asc_gz = list_of_files(raster_folder, file_type='.asc.gz')\n",
     "    \n",
     "    if len(files_asc_gz) != 0:\n",
+    "        print()\n",
     "        # Decompress rasterfiles:\n",
     "        for f in tqdm(files_asc_gz,\n",
     "                      desc='',\n",
     "                      bar_format='{l_bar}{bar:40}| ({n_fmt}/{total_fmt}) Decompressing files.',\n",
     "                      ncols=120):\n",
     "            decompress_file(f)\n",
-    "        print('Decompressed files!')\n",
     "    else:\n",
     "        print('Files are already decompressed.')\n",
     "\n",
@@ -689,12 +685,12 @@
     "\n",
     "    if len(files_asc) != 0:\n",
     "        # Transform decompressed files to tif and add crs:\n",
+    "        print()\n",
     "        for f in tqdm(files_asc,\n",
     "                      desc='',\n",
     "                      bar_format='{l_bar}{bar:40}| ({n_fmt}/{total_fmt}) Transforming files to the right format.',\n",
     "                      ncols=120):\n",
     "            asc_to_tif_add_crs(f, prj_file)\n",
-    "        print('Transformed files to the right format!')\n",
     "    else:\n",
     "        print('Files are already transformed to the right format.')\n",
     "\n",
@@ -705,6 +701,7 @@
     "    rasterstats_list = []\n",
     "\n",
     "    # Iterate over files_tif and perform rasterstats calculations on each rasterfile and the shapefile:\n",
+    "    print()\n",
     "    for f in tqdm(files_tif,\n",
     "                  desc='',\n",
     "                  bar_format='{l_bar}{bar:40}| ({n_fmt}/{total_fmt}) Calculating rasterstats.',\n",
@@ -1677,7 +1674,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.13.7"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
